code25_all/scala/14837485.txt
scala> val map=Map[String,Int]()
map: scala.collection.immutable.Map[String,Int] = Map()

scala> val a=HashMap[Int,Int]()
 <console>:7: error: not found: value HashMap
       val a=HashMap[Int,Int]()
             ^

